--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,23 @@
 	<body>
 		<table id=accounts>
 		</table>
+		<table id=controls>
+			<tr>
+				<td> <input type='button' id='run' value='run'> </input> </td>
+				<td> </td>
+				<td> <input type='number' id='iters' value=32> </input> </td>
+			</tr>
+			<tr>
+				<td> <input type='number' id='wait_low' value=3> </input> </td>
+				<td> - </td>
+				<td> <input type='number' id='wait_high' value=7> </input> </td>
+			</tr>
+			<tr>
+				<td> <input type='number' id='gap_low' value=1> </input> </td>
+				<td> - </td>
+				<td> <input type='number' id='gap_high' value=5> </input> </td>
+			</tr>
+		</table>
 	</body>
 </html>
 
