add controls to mvc

--- a/popup.html
+++ b/popup.html
@@ -20,17 +20,17 @@
 			<tr>
 				<td> <input type='button' id='run' value='run'> </input> </td>
 				<td> </td>
-				<td> <input type='number' id='iters' value=32> </input> </td>
+				<td> <input type='number' class='control' id='iters'> </input> </td>
 			</tr>
 			<tr>
-				<td> <input type='number' id='wait_low' value=3> </input> </td>
+				<td> <input type='number' class='control' id='wait_low'> </input> </td>
 				<td> - </td>
-				<td> <input type='number' id='wait_high' value=7> </input> </td>
+				<td> <input type='number' class='control' id='wait_high'> </input> </td>
 			</tr>
 			<tr>
-				<td> <input type='number' id='gap_low' value=1> </input> </td>
+				<td> <input type='number' class='control' id='gap_low'> </input> </td>
 				<td> - </td>
-				<td> <input type='number' id='gap_high' value=5> </input> </td>
+				<td> <input type='number' class='control' id='gap_high'> </input> </td>
 			</tr>
 		</table>
 	</body>
