--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Bing Rewards Helper</title>
+		<title>brome</title>
 		<style>
 			body {
 				overflow: hidden;
