add button to clear state

--- a/popup.html
+++ b/popup.html
@@ -17,13 +17,21 @@
 	<body>
 		<table id=accounts>
 		</table>
+		<p>
+		<input type='button' class='clear' value='clear all working state' id='1'> </input>
+		&nbsp &nbsp
+		<input type='button' class='clear' value='restore all controls' id='2'> </input>
+		</p>
 		<table id=controls>
+			</tr>
 			<tr>
+				<td> wait b/w accounts: </td>
 				<td> <input type='number' class='control' id='wait_low'> </input> </td>
 				<td> - </td>
 				<td> <input type='number' class='control' id='wait_high'> </input> </td>
 			</tr>
 			<tr>
+				<td> gap b/w tasks: </td>
 				<td> <input type='number' class='control' id='gap_low'> </input> </td>
 				<td> - </td>
 				<td> <input type='number' class='control' id='gap_high'> </input> </td>
