add isMobileMode and Mobile Search feature; fix bugs of scrape

--- a/popup.html
+++ b/popup.html
@@ -21,6 +21,8 @@
 		<input type='button' class='clear' value='clear all working state' id='1'> </input>
 		&nbsp &nbsp
 		<input type='button' class='clear' value='restore all controls' id='2'> </input>
+		&nbsp &nbsp isMobile
+		<input type='checkbox' class='controlCheck' id='isMobileMode'> </input>
 		</p>
 		<table id=controls>
 			</tr>
